--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /target/
 target/*
+src/main/resources/dronetelemetrytool/DJI_0004.MOV
+src/main/resources/dronetelemetrytool/DJI_0002.MOV
+src/main/resources/dronetelemetrytool/DJI_0003.MOV
+src/main/resources/dronetelemetrytool/DJI_0003.mp4
+src/main/resources/dronetelemetrytool/DJI_0003.mp4
