--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,11 @@
             <artifactId>javafx-swing</artifactId>
             <version>17.0.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
