--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ src/main/resources/dronetelemetrytool/DJI_0002.MOV
 src/main/resources/dronetelemetrytool/DJI_0003.MOV
 src/main/resources/dronetelemetrytool/DJI_0003.mp4
 src/main/resources/dronetelemetrytool/DJI_0003.mp4
+src/main/resources/dronetelemetrytool/data/DJI_0175\[1\].CSV
+src/main/resources/dronetelemetrytool/data/DJI_0175\[1\].CSV
+src/main/resources/dronetelemetrytool/DJI_0175.MP4
+src/main/resources/dronetelemetrytool/DJI_0175.MP4
+src/main/resources/dronetelemetrytool/data/DJI_0175\[1\].CSV
