--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 /target/
 target/*
+target/
+target
+/target
 src/main/resources/dronetelemetrytool/DJI_0004.MOV
 src/main/resources/dronetelemetrytool/DJI_0002.MOV
 src/main/resources/dronetelemetrytool/DJI_0003.MOV
 src/main/resources/dronetelemetrytool/DJI_0003.mp4
-src/main/resources/dronetelemetrytool/DJI_0003.mp4
-src/main/resources/dronetelemetrytool/data/DJI_0175\[1\].CSV
 src/main/resources/dronetelemetrytool/data/DJI_0175\[1\].CSV
 src/main/resources/dronetelemetrytool/DJI_0175.MP4
-src/main/resources/dronetelemetrytool/DJI_0175.MP4
-src/main/resources/dronetelemetrytool/data/DJI_0175\[1\].CSV
