--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ src/main/resources/dronetelemetrytool/DJI_0003.mp4
 src/main/resources/dronetelemetrytool/data/DJI_0175\[1\].CSV
 src/main/resources/dronetelemetrytool/DJI_0175.MP4
 src/main/resources/dronetelemetrytool/data/DJI_0175.MP4
+src/main/resources/dronetelemetrytool/data/gaugeList.ser
